--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,4 @@
-maki4j has **bimock** tool that helps us record & replay dependent objects for unit tests.
-======
+### maki4j has **bimock** tool that helps us record & replay dependent objects for unit tests.
 
 Resources: [Goodbye! to expect-run-verify](http://monkeyisland.pl/2008/02/01/deathwish/), [Mockito Tutorial](http://docs.mockito.googlecode.com/hg/latest/org/mockito/Mockito.html)
 
