--- a/README.mkd
+++ b/README.mkd
@@ -49,12 +49,45 @@ public class AppConfig {
 </beans>
 ```
 
+##### example unit tests that leverage bimock
+
+* [BimockTest](https://github.com/henry4j/maki4j/blob/master/sources/maki4j/src/test/java/com/henry4j/commons/BimockTest.java) -- this is a self test with its resources, [test-record-and-replay-list.json](https://github.com/henry4j/maki4j/blob/master/sources/maki4j/src/test/resources/test-record-and-replay-list.json), and [test-record-and-replay-map.json](https://github.com/henry4j/maki4j/blob/master/sources/maki4j/src/test/resources/test-record-and-replay-map.json)
+
+```java
+public class BimockTest {
+    private Mode mode = Mode.Replay;
+    private PojoMapper pojoMapper = new PojoMapper(new BimockModule());
+    private Bimock bimock = new Bimock(pojoMapper);
+
+    @Test
+    public void testRecordAndReplayMap() throws IOException {
+        val map = bimock.of(new HashMap<String, Integer>(), mode, new File("src/test/resources/test-record-and-replay-map.json"));
+        assertThat(map.put("abc", 3), equalTo(null));
+        assertThat(map.size(), equalTo(1));
+        assertThat(map.get("abc"), equalTo(3));
+    }
+
+    @Test
+    public void testRecordAndReplayList() {
+        List<Long> list = new ArrayList<Long>();
+        list = bimock.of(list, mode, new File("src/test/resources/test-record-and-replay-list.json"));
+        try {
+            assertThat(list.remove(-1), nullValue());
+            fail();
+        } catch (ArrayIndexOutOfBoundsException e) {
+            assertThat(e.getMessage(), equalTo("-1"));
+        }
+        assertThat(list.add(100L), equalTo(true));
+        assertThat(list.toArray(new Long[1]), equalTo(new Long[] { 100L }));
+    }
+}
+```
+
 #### Bimock Implementation in 3 classes
 
 * [Bimock](https://github.com/henry4j/maki4j/blob/master/sources/maki4j/src/main/java/com/henry4j/commons/stubbing/Bimock.java) -- this is the main module that depends on PojoMapper and BimockModule.
 * [BimockModule](https://github.com/henry4j/maki4j/blob/master/sources/maki4j/src/main/java/com/henry4j/commons/stubbing/BimockModule.java) -- this Jackson module contains mix-ins that control serialization and deserialization.
 * [PojoMapper](https://github.com/henry4j/maki4j/blob/master/sources/maki4j/src/main/java/com/henry4j/commons/base/PojoMapper.java) -- this is the mapper that serializes POJO to JSON and deserializes POJO from JSON.
-* [BimockTest](https://github.com/henry4j/maki4j/blob/master/sources/maki4j/src/test/java/com/henry4j/commons/BimockTest.java) -- this is a self test with its resources, [test-record-and-replay-list.json](https://github.com/henry4j/maki4j/blob/master/sources/maki4j/src/test/resources/test-record-and-replay-list.json), and [test-record-and-replay-map.json](https://github.com/henry4j/maki4j/blob/master/sources/maki4j/src/test/resources/test-record-and-replay-map.json)
 
 #### When in Trouble with Bimock
 
